--- a/README
+++ b/README
@@ -1,16 +1,100 @@
 Filter-Cleanup
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
+Filter::Cleanup provides a simple way to deal with cleaning up after multiple
+error conditions modeled after the D programming language's C<scope(exit)>
+mechanism.
 
-A README file is required for CPAN modules since CPAN extracts the README
-file from a module distribution so that people browsing the archive
-can use it to get an idea of the module's uses. It is usually a good idea
-to provide version information here so that people can decide whether
-fixes for the module are worth downloading.
+Each C<cleanup> block operates in essentially the same manner as a C<finally>
+block in languages supporting try/catch/finally style error handling.
 
+C<cleanup> blocks may be placed anywhere in a scope. All statements lexically
+scoped after the C<cleanup> block will be wrapped in an C<eval>. Should an error
+be triggered within the block, the C<cleanup> statement will be called before
+any error is rethrown (using C<croak>).
+
+Within the C<cleanup> block, the status of C<$@> may be inspected normally.
+
+Multiple C<cleanup> blocks stack, and each I<MUST> be followed by a semi-colon
+to ensure proper organization of the outputted code. C<cleanup>s are executed
+in reverse order (it's a stack, see?) and may be nested, although this defeats
+the purpose. The reason for reverse execution is that each cleanup represents
+another nested level of evals and clean-up code.
+
+Take the following code:
+
+    use Filter::Cleanup;
+    
+    sub example {
+        cleanup { print "FOO" };
+        print "BAR";
+        return 1;
+    }
+
+This is roughly the output of the source filter:
+
+    sub example {
+        my $result = eval {
+            print "BAR";
+            return 1;
+        };
+        
+        my $error = $@;
+        
+        print "FOO";
+        
+        if ($error) {
+            croak $error;
+        } else {
+            $result; # returns 1
+        }
+    }
+
+Now with multiple cleanups:
+
+    use Filter::Cleanup;
+    
+    sub example {
+        cleanup { print "FOO" };
+        cleanup { print "BAZ" };
+        print "BAR";
+        return 1;
+    }
+    
+The following code would be generated:
+
+    sub example {
+        my $result = eval {
+            my $result = eval {
+                print "BAR";
+                return 1;
+            };
+            
+            my $error = $@;
+            
+            print "BAZ";
+            
+            if ($error) {
+                croak $error;
+            } else {
+                $result;
+            }
+        };
+        
+        my $error = $@;
+        
+        print "FOO";
+        
+        if ($error) {
+            croak $error;
+        } else {
+            $result; # returns 1
+        }
+    }
+
+Internally, PPI is used to parse the module and generate the new code. This is
+because there are so many different forms which could proceed a C<cleanup> block
+that there is no more efficient way to ensure that valid code is emitted. PPI
+has proven to be stable, robust, and very reasonably efficient.
 
 INSTALLATION
 
